--- a/src/Styles/PostsRenderer.module.css
+++ b/src/Styles/PostsRenderer.module.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-direction: column;
     gap: 1em;
-    padding: 50px 0px;
+    padding: 50px 0px  150px 0px;
     justify-content: center;
     align-items: center;
 }
+
